# marble

./: .gitignore  .gitmodules  .tinyconf  CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh  todo.txt
resources/data/: colliders.json
resources/models/bridge/: bridge.mtl
resources/models/cars/: car1.mtl  car2.mtl  car3.mtl
resources/models/ghost/: ghost.mtl
resources/models/truck/: truck.mtl
shaders/: audioviz.comp  switch.comp  vizfilter.comp
src/: main.c
src/audio/: dsp.c  dsp.h  mic.c  mic.h  spatial.c  spatial.h  tap.h
src/data/: boxloader.c  boxloader.h  forward.h
src/ecs/: components.h  entity.c  entity.h  registry.c  registry.h
src/examples/: echo.c  echo.h  ghosts.c  ghosts.h  trucker.c  trucker.h
src/extensions/: eviewport.c  eviewport.h
src/game/: application.c  application.h  scene.c  scene.h  world.c  world.h
src/systems/: system.c  system.h
src/systems/defined/: aisystem.c  aisystem.h  audiosystem.c  audiosystem.h  collisionsystem.c  collisionsystem.h  drawsystem.c  drawsystem.h
src/util/: ai.c  ai.h  astar.c  astar.h  bvh.c  bvh.h  geometry.c  geometry.h  navigation.c  navigation.h  spacegrid.c  spacegrid.h
